# surface_splatting

./: CMakeLists.txt  COPYING.MIT  README.md  build-extern.cmd  build-extern.ps1  build-extern.sh
.github/workflows/: build.yml
cmake/: Config.cmake.in
cmake/Modules/: GLvizShaderWrapCpp.cmake  shader_wrap_cpp.cmake
example/: CMakeLists.txt  example.cpp
glviz/: CMakeLists.txt
glviz/include/: GLviz
glviz/src/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  glviz.cpp  glviz.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  trackball.cpp  trackball.hpp  utility.cpp  utility.hpp
glviz/src/shader/: mesh3_fs.glsl  mesh3_gs.glsl  mesh3_vs.glsl  sphere_fs.glsl  sphere_vs.glsl
resources/: stanford_dragon_v40k_f80k.raw
src/: CMakeLists.txt  framebuffer.cpp  framebuffer.hpp  main.cpp  program_attribute.cpp  program_attribute.hpp  program_finalization.cpp  program_finalization.hpp  splat_renderer.cpp  splat_renderer.hpp
src/shader/: attribute_fs.glsl  attribute_vs.glsl  finalization_fs.glsl  finalization_vs.glsl  lighting.glsl
surface_splatting/: CMakeLists.txt  config.hpp.in  framebuffer.cpp  framebuffer.hpp  main.cpp  program_attribute.hpp  program_finalization.hpp  splat_renderer.cpp  splat_renderer.hpp
surface_splatting/shader/: attribute_fs.glsl  attribute_vs.glsl  finalization_fs.glsl  lighting.glsl
